--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
                 <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
+                <a href="#">Bombando</a>
+                <a href="#">Minha Lista</a>
             </nav>
         </div>
     </header> 
+
+    <main>
+        <div class="filme-principal">
+            <div class="cointainer">
+                <h3 class="titulo">THE FLASH</h3>
+                <p>Um perito forense desperta de
+                um coma com poderes especiais que
+                serão postos à prova na luta contra
+                forças que ameaçam a cidade.</p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
