--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Netflix Clone</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -19,18 +21,31 @@
                 <a href="#">Minha Lista</a>
             </nav>
         </div>
-    </header> 
+    </header>
 
     <main>
         <div class="filme-principal">
-            <div class="cointainer">
-                <h3 class="titulo">THE FLASH</h3>
-                <p>Um perito forense desperta de
-                um coma com poderes especiais que
-                serão postos à prova na luta contra
-                forças que ameaçam a cidade.</p>
+            <div class="container">
+                <h3 class="titulo">ARCANE</h3>
+                <p class="descricao">Em meio ao conflito entre as cidades-gêmeas
+                    de Piltover e Zaun, duas irmãs lutam em lados
+                    opostos de uma guerra entre tecnologias mágicas
+                    e convicções incompatíveis.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        Assistir
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        Mais informações
+                    </button>
+                </div>
             </div>
         </div>
     </main>
+
+
+
 </body>
 </html>
