--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </main>
 
+    <script src="https://kit.fontawesome.com/c7a718ab03.js" crossorigin="anonymous"></script>
 
 
 </body>
