--- a/index.html
+++ b/index.html
@@ -14,11 +14,37 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light margin">
-        <a class="navbar-brand" href="#">
-            <img src="imagens/netflix-logo.svg" width="100">
-        </a>
-    </nav>
+    <div class="fontes">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+              <img src="imagens/netflix-logo.svg" width="100">
+               
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Início</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Séries</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Filmes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Bombando</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Minha Lista</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Títulos, gente e gêneros" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
 
     <main>
         <div class="filme-principal">
@@ -26,10 +52,7 @@
                 <h3 class="titulo"><b>Homem-Aranha: De Volta ao Lar</b></h3>
                 <p class="descricao">Depois de atuar ao lado dos Vingadores,
                 chegou a hora do pequeno Peter Parker (Tom Holland) voltar
-                para casa e para a sua vida, já não mais tão normal. Lutando
-                diariamente contra pequenos crimes nas redondezas, ele pensa
-                ter encontrado a missão de sua vida quando o terrível vilão
-                Abutre (Michael Keaton) surge amedrontando a cidade.</p>
+                para casa e para a sua vida, já não mais tão normal.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
                         <i class="fas fa-play"></i>
